[package]
name = "phrog"
version = "0.53.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
glob = "0.3.1"
greetd_ipc = { version = "0.10.0", features = ["sync-codec"] }
async-channel = "2.2.1"
anyhow = "1.0.82"
libphosh = "0.0.7"
clap = { version = "4.5.4", features = ["derive"] }
wayland-client = "0.31"
zbus = { version = "5", default-features = false, features = ["blocking", "async-io"] }
nix = { version = "0.30", features = ["signal"] }
async-global-executor = "3.0.0"
futures-util = "0.3.30"
log = "0.4.22"
lazy_static = "^1.4"

[dependencies.glib]
version = "0.18"
features = ["log_macros"]

[dependencies.gtk]
version = "0.18"
features = ["v3_24"]

[dependencies.libhandy]
version = "0.11"
features = ["v1_6"]

[build-dependencies]
glib-build-tools = "0"

[dev-dependencies]
input-event-codes = "6.2.0"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
tempfile = "3"
serde = "1.0.217"
