[package]
name = "libphosh"
version = "0.0.4"
authors = ["Guido Günther <agx@sigxcpu.org>"]
edition = "2021"
readme = "../README.md"
homepage = "https://gitlab.gnome.org/guidog/libphosh-rs"
description = "Rust bindings for libphosh"
license = "MIT"
repository = "https://gitlab.gnome.org/guidog/libphosh-rs.git"
categories = ["api-bindings"]
keywords = ["phosh", "gnome"]

[lib]
name = "libphosh"

[features]
default = ["gtk_v3_20"]
gtk_v2_4 = []
gtk_v2_6 = ["gtk_v2_4"]
gtk_v2_10 = ["gtk_v2_6"]
gtk_v2_12 = ["gtk_v2_10"]
gtk_v2_18 = ["gtk_v2_12"]
gtk_v2_20 = ["gtk_v2_18"]
gtk_v3 = ["gtk_v2_20"]
gtk_v3_4 = ["gtk_v3"]
gtk_v3_8 = ["gtk_v3_4"]
gtk_v3_12 = ["gtk_v3_8"]
gtk_v3_14 = ["gtk_v3_12"]
gtk_v3_20 = ["gtk_v3_14"]
v3_12 = []
v3_14 = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = '0.2'

[dependencies.gdk]
version = "0.18"

[dependencies.gio]
version = "0.18"
features = [ "v2_70" ]

[dependencies.glib]
version = "0.18"
features = [ "v2_66" ]

[dependencies.gtk]
version = "0.18"
features = ["v3_24"]

[dependencies.ffi]
package = "libphosh-sys"
path = './sys'
version = "0.0.4"
