[package]
name = "phrog"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.1"
uzers = { git = "https://github.com/rustadopt/uzers-rs", rev = "8fb29db" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.phosh-dm]
path = "../phosh-dm"

[dependencies.gtk]
version = '0.18'
branch = "0.18"
git = "https://github.com/gtk-rs/gtk3-rs.git"
features = ['v3_24']

[dependencies.libhandy]
git = "https://gitlab.gnome.org/World/Rust/libhandy-rs"

[build-dependencies]
glib-build-tools = "0.19.0"
