[package]
name = "libphosh"
version = "0.0.2"
authors = ["Guido Günther <agx@sigxcpu.org>"]
edition = "2021"
readme = "../README.md"
homepage = "https://gitlab.gnome.org/guidog/libphosh-rs"
description = "Rust bindings for libphosh"
license = "MIT"
repository = "https://gitlab.gnome.org/guidog/libphosh-rs.git"
categories = ["api-bindings"]
keywords = ["phosh", "gnome"]

[lib]
name = "libphosh"

[features]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = '0.2'

[dependencies.glib]
version = "0.18"
features = [ "v2_66" ]

[dependencies.gio]
version = "0.18"
features = [ "v2_70" ]

[dependencies.gtk]
version = "0.18"
features = ["v3_24"]

[dependencies.ffi]
package = "libphosh-sys"
path = './sys'
version = "0.0.2"
