[package]
name = "libphosh-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"
authors = ["Guido Günther <agx@sigxcpu.org>"]
categories = ["api-bindings", "gui"]
keywords = ["phosh", "gnome"]
license = "MIT"

[package.metadata.system-deps.libphosh_0]
name = "libphosh-0"
version = "0.38"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "phosh_sys"

[dependencies]
libc = "0.2"

[dependencies.gdk-pixbuf-sys]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.gdk-sys]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk3-rs.git"

[dependencies.gio-sys]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.glib-sys]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.gobject-sys]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.gtk-sys]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk3-rs.git"
features = ["v3_24"]

[dependencies.pango-sys]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.handy_sys]
git = "https://gitlab.gnome.org/World/Rust/libhandy-rs"
package = "libhandy-sys"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
