[package]
name = "libphosh-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"
authors = ["Guido Günther <agx@sigxcpu.org>"]
categories = ["api-bindings", "gui"]
keywords = ["phosh", "gnome"]
description = "FFI bindings for libphosh"
license = "MIT"

[package.metadata.system-deps.libphosh_0]
name = "libphosh-0"
version = "0.38"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "phosh_sys"

[dependencies]
libc = "0.2"

[dependencies.gdk-pixbuf-sys]
version = "0.18"

[dependencies.gdk-sys]
version = "0.18"

[dependencies.gio-sys]
version = "0.18"

[dependencies.glib-sys]
version = "0.18"

[dependencies.gobject-sys]
version = "0.18"

[dependencies.gtk-sys]
version = "0.18"
features = ["v3_24"]

[dependencies.pango-sys]
version = "0.18"

[dependencies.handy_sys]
package = "libhandy-sys"
version = "0.11"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
