if get_option('examples')

example_timeout = executable(
  'gm-timeout',
  ['gm-timeout.c'],
  dependencies: [gmobile_shared_dep],
  install: true
)

example_display_panel_preview = executable(
  'gm-display-panel-preview',
  ['gm-display-panel-preview.c'],
  dependencies: [gmobile_shared_dep],
  install: true
)

example_display_panel_run_phosh = executable(
  'gm-display-panel-run-phosh',
  ['gm-display-panel-run-phosh.c'],
  dependencies: [gmobile_shared_dep],
  install: true
)

endif
